--- a/config/oculus.properties
+++ b/config/oculus.properties
@@ -1,5 +1,5 @@
 #This file stores configuration options for Iris, such as the currently active shaderpack
-#Sat Feb 08 21:51:36 EST 2025
+#Sat Mar 22 16:25:25 EDT 2025
 colorSpace=SRGB
 disableUpdateMessage=false
 enableDebugOptions=false
